<resources>
    <string name="app_name">Myfamily</string>
    <string name="security">Security</string>
    <string name="in_case_of_emergency_keep_telling_family_members_to_contact_me">In case of emergency, keep telling family members to contact me</string>
    <string name="sos">SOS</string>
    <string name="guard">GUARD</string>
    <string name="guard_se">Open when you are on a potentially dangerous journey</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="Guard">Guard</string>
    <string name="profile">Profile</string>
    <string name="my_family">My Family</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>